--- a/templates/home.html
+++ b/templates/home.html
@@ -3,6 +3,6 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
-<h2>Home Page</h2>
-<p>Welcome back, {{ username }}!</p>
+<h2>Home</h2>
+<p>Welcome back, {{ usuario }}!</p>
 {% endblock %}
