--- a/templates/index.html
+++ b/templates/index.html
@@ -15,10 +15,10 @@
 
 			</div>
 			<form action="{{ url_for('login') }}" method="post">
-				<label for="username">
+				<label for="usuario">
 					<i class="fas fa-user"></i>
 				</label>
-				<input type="text" name="username" placeholder="Username" id="username" required>
+				<input type="text" name="usuario" placeholder="Username" id="usuario" required>
 				<label for="password">
 					<i class="fas fa-lock"></i>
 				</label>
