--- a/templates/home.html
+++ b/templates/home.html
@@ -5,4 +5,6 @@
 {% block content %}
 <h2>Home</h2>
 <p>Welcome back, {{ usuario }}!</p>
+<img src="../static/images/pagina en construccion.jpg" alt="espacio en construccion" width="850px" title="Espacio en construccion"/>
+
 {% endblock %}
