--- a/templates/index.html
+++ b/templates/index.html
@@ -3,10 +3,12 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Login</title>
+		<link rel="shortcut icon" href="/static/images/icono.jpg" /> 
 		<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
 	</head>
 	<body>
+		
 		<div class="login">
 			<h1>Login</h1>
 			<div class="links">
