--- a/templates/index.html
+++ b/templates/index.html
@@ -20,11 +20,11 @@
 				<label for="usuario">
 					<i class="fas fa-user"></i>
 				</label>
-				<input type="text" name="usuario" placeholder="Username" id="usuario" required>
+				<input type="text" name="usuario" placeholder="Usuario" id="usuario" required>
 				<label for="password">
 					<i class="fas fa-lock"></i>
 				</label>
-				<input type="password" name="password" placeholder="Password" id="password" required>
+				<input type="password" name="password" placeholder="Contraseña" id="password" required>
 				<div class="msg">{{ msg }}</div>
 				<input type="submit" value="Login">
 			</form>
