name and surename added on homepage

--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <h2>Home</h2>
-<p>Welcome back, {{ usuario }}!</p>
+<p>¡Bienvenido, {{ nombre }} {{apellido}}!</p>
 <img src="../static/images/pagina en construccion.jpg" alt="espacio en construccion" width="850px" title="Espacio en construccion"/>
 
 {% endblock %}
