--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,9 +12,9 @@
 			
 			<div>
 				<h1>MASCOTAPP</h1>
-                <a href="{{ url_for('home') }}"><i class="fas fa-home"></i>Home</a>
+                <a href="{{ url_for('edit') }}"><i class="fas fa-user-edit"></i>Editar</a>
 			
-				<a href="{{ url_for('logout') }}"><i class="fas fa-sign-out-alt"></i>Logout</a>
+				<a href="{{ url_for('logout') }}"><i class="fas fa-sign-out-alt"></i>Cerrar Sesion</a>
 			</div>
 		</nav>
 		<div class="content">
