--- a/templates/register.html
+++ b/templates/register.html
@@ -13,27 +13,27 @@
 				<a href="{{ url_for('login') }}">Login</a>
 				<a href="{{ url_for('register') }}" class="active">Registrarse</a>
 			</div>
-			<form action="{{ url_for('register') }}" method="post" autocomplete="off">
-				<label for="nombre">
-					<i class="fas fa-user"></i>
-				</label>
-				<input type="text" name="nombre" placeholder="Nombre" id="nombre" required>
-				<label for="apellido">
-					<i class="fas fa-lock"></i>
-				</label>
-				<input type="text" name="apellido" placeholder="Apellido" id="apellido" required>
-				<label for="localidad">
-					<i class="fas fa-envelope"></i>
-				</label>
-				<input type="text" name="localidad" placeholder="Localidad" id="localidad" required>
+			<form action="{{ url_for('register') }}" method="post" autocomplete="off">		
                 <label for="usuario">
-					<i class="fas fa-envelope"></i>
+					<i class="fas fa-user"></i>
 				</label>
 				<input type="text" name="usuario" placeholder="Usuario" id="usuario" required>
                 <label for="password">
+					<i class="fas fa-lock"></i>
+				</label>
+				<input type="password" name="password" placeholder="Contraseña" id="password" minlength="5" maxlength="10" required>
+				<label for="nombre">
 					<i class="fas fa-envelope"></i>
 				</label>
-				<input type="password" name="password" placeholder="Password" id="password" required>
+				<input type="text" name="nombre" placeholder="Nombre" id="nombre" required>
+				<label for="apellido">
+					<i class="fas fa-envelope"></i>
+				</label>
+				<input type="text" name="apellido" placeholder="Apellido" id="apellido" required>
+				<label for="localidad">
+					<i class="fas fa-map-marker-alt"></i>
+				</label>
+				<input type="text" name="localidad" placeholder="Localidad" id="localidad" required>
 				<div class="msg">{{ msg }}</div>
 				<input type="submit" value="Registrarse">
 			</form>
