--- a/static/style.css
+++ b/static/style.css
@@ -1,4 +1,4 @@
-* {
+*{
     box-sizing: border-box;
     font-family: -apple-system, BlinkMacSystemFont, "segoe ui", roboto, oxygen, ubuntu, cantarell, "fira sans", "droid sans", "helvetica neue", Arial, sans-serif;
     font-size: 16px;
@@ -9,45 +9,47 @@ body {
     background-image: url(/static/images/woman-2711279_1920.jpg );
     margin: 0;
     background-repeat: no-repeat;
+    border-radius: 5%;
 }
-.login, .register {
+
+.login, .register, .edit {
     width: 400px;
     background-color: #ffffff;
     box-shadow: 0 0 9px 0 rgba(0, 0, 0, 0.3);
     margin: 100px auto;
 }
-.login h1, .register h1 {
+.login h1, .register h1, .edit h1 {
     text-align: center;
     color: #5b6574;
     font-size: 24px;
     padding: 20px 0 20px 0;
     border-bottom: 1px solid #dee0e4;
 }
-.login .links, .register .links {
+.login .links, .register .links, .edit .links {
     display: flex;
     padding: 0 15px;
 }
-.login .links a, .register .links a {
+.login .links a, .register .links a, .edit .links a {
     color: #adb2ba;
     text-decoration: none;
     display: inline-flex;
     padding: 0 10px 10px 10px;
     font-weight: bold;
 }
-.login .links a:hover, .register .links a:hover {
+.login .links a:hover, .register .links a:hover, .edit .links a:hover {
     color: #9da3ac;
 }
-.login .links a.active, .register .links a.active {
+.login .links a.active, .register .links a.active, .edit .links a.active {
     border-bottom: 3px solid #3274d6;
     color: #3274d6;
 }
-.login form, .register form {
+.login form, .register form, .edit form {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     padding-top: 20px;
 }
-.login form label, .register form label {
+.login form label, .register form label, .edit form label {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -56,6 +58,7 @@ body {
     background-color: #3274d6;
     color: #ffffff;
 }
+
 .login form input[type="password"], .login form input[type="text"], .login form input[type="email"], .register form input[type="password"], .register form input[type="text"], .register form input[type="email"] {
     width: 310px;
     height: 50px;
