--- a/templates/register.html
+++ b/templates/register.html
@@ -15,7 +15,7 @@
 			</div>
 			<form action="{{ url_for('register') }}" method="post" autocomplete="off">		
                 <label for="usuario">
-					<i class="fas fa-user"></i>
+					<i class="fas fa-id-card"></i>
 				</label>
 				<input type="text" name="usuario" placeholder="Usuario" id="usuario" required>
                 <label for="password">
@@ -23,11 +23,11 @@
 				</label>
 				<input type="password" name="password" placeholder="Contraseña" id="password" minlength="5" maxlength="10" required>
 				<label for="nombre">
-					<i class="fas fa-envelope"></i>
+					<i class="fas fa-user"></i>
 				</label>
 				<input type="text" name="nombre" placeholder="Nombre" id="nombre" required>
 				<label for="apellido">
-					<i class="fas fa-envelope"></i>
+					<i class="fas fa-user"></i>
 				</label>
 				<input type="text" name="apellido" placeholder="Apellido" id="apellido" required>
 				<label for="localidad">
