--- a/templates/edit.html
+++ b/templates/edit.html
@@ -15,11 +15,11 @@
             </label>
             <input type="password" name="password" placeholder="Contraseña" id="password" minlength="5" maxlength="10" required>
             <label for="nombre">
-                <i class="fas fa-envelope"></i>
+                <i class="fas fa-user"></i>
             </label>
             <input type="text" name="nombre" placeholder="Nombre" id="nombre" required>
             <label for="apellido">
-                <i class="fas fa-envelope"></i>
+                <i class="fas fa-user"></i>
             </label>
             <input type="text" name="apellido" placeholder="Apellido" id="apellido" required>
             <label for="localidad">
