muestra datos actuales en edicion de usuario

--- a/templates/edit.html
+++ b/templates/edit.html
@@ -13,19 +13,19 @@
             <label for="password">
                 <i class="fas fa-lock"></i>
             </label>
-            <input type="password" name="password" placeholder="Contraseña" id="password" minlength="5" maxlength="10" required>
+            <input type="password" name="password" placeholder="Contraseña" id="password" minlength="5" maxlength="10" required value="{{user['contraseña']}}">
             <label for="nombre">
                 <i class="fas fa-user"></i>
             </label>
-            <input type="text" name="nombre" placeholder="Nombre" id="nombre" required>
+            <input type="text" name="nombre" placeholder="Nombre" id="nombre" required value="{{user['nombre']}}">
             <label for="apellido">
                 <i class="fas fa-user"></i>
             </label>
-            <input type="text" name="apellido" placeholder="Apellido" id="apellido" required>
+            <input type="text" name="apellido" placeholder="Apellido" id="apellido" required value="{{user['apellido']}}">
             <label for="localidad">
                 <i class="fas fa-map-marker-alt"></i>
             </label>
-            <input type="text" name="localidad" placeholder="Localidad" id="localidad" required>
+            <input type="text" name="localidad" placeholder="Localidad" id="localidad" required value="{{user['localidad']}}">
             <div class="msg">{{ msg }}</div>
             <input type="submit" value="Modificar">
         </form>
