--- a/static/style.css
+++ b/static/style.css
@@ -150,3 +150,9 @@ body.loggedin {
   padding: 5px;
   margin: 0 0 10px 0;
 }
+.msg-success {
+    color: limegreen;
+}
+.msg-error {
+    color: red;
+}
