--- a/templates/register.html
+++ b/templates/register.html
@@ -34,7 +34,7 @@
 					<i class="fas fa-map-marker-alt"></i>
 				</label>
 				<input type="text" name="localidad" placeholder="Localidad" id="localidad" required>
-				<div class="msg">{{ msg }}</div>
+				<div class="msg-error">{{ error }}</div>
 				<input type="submit" value="Registrarse">
 			</form>
 		</div>
