--- a/templates/edit.html
+++ b/templates/edit.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Editar Usuario</title>
+    <link rel="shortcut icon" href="/static/images/icono.jpg" /> 
     
     <link rel="stylesheet" href="{{ url_for('static', filename='edit.css') }}">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
