--- a/templates/register.html
+++ b/templates/register.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Registrarse</title>
+		<link rel="shortcut icon" href="/static/images/icono.jpg" /> 
 		<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
 	</head>
