--- a/templates/edit.html
+++ b/templates/edit.html
@@ -13,7 +13,7 @@
             <label for="password">
                 <i class="fas fa-lock"></i>
             </label>
-            <input type="password" name="password" placeholder="Contraseña" id="password" minlength="5" maxlength="10" required value="{{user['contraseña']}}">
+            <input type="password" name="password" placeholder="Contraseña" id="password" minlength="5" maxlength="10" required value="{{user['password']}}">
             <label for="nombre">
                 <i class="fas fa-user"></i>
             </label>
