--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
 				<label for="usuario">
 					<i class="fas fa-id-card"></i>
 				</label>
-				<input type="text" name="usuario" placeholder="Usuario" id="usuario" required>
+				<input type="text" name="usuario" placeholder="Usuario" id="usuario" autocomplete="off" required>
 				<label for="password">
 					<i class="fas fa-lock"></i>
 				</label>
